add: login function, info page, interface management

--- a/bpr-miniprogram/pages/user/user.wxml
+++ b/bpr-miniprogram/pages/user/user.wxml
@@ -1,14 +1,26 @@
 <!--pages/user/user.wxml-->
-<view class="container">
-  <view class="userinfo">
-    <block wx:if="{{!hasUserInfo}}">
-      <button wx:if="{{canIUseGetUserProfile}}" bindtap="getUserProfile"> 获取头像昵称 </button>
-    </block>
-    <block wx:else>
-      <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
-      <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-    </block>
+<view style="height: 185px; background-color: rgba(210, 221, 218, 0.39); text-align: center; vertical-align: middle; ">
+  <view style="padding: 75px 5px 5px 5px;">
+    <van-image round fit="fill" width="80px" height="80px" src="{{ userInfo.avatarUrl }}" wx:if="{{canIUseGetUserProfile}}" bind:click="getUserProfile" style="border: 1px;"/>
+    <span style="display:block">{{userInfo.nickName}}</span>
   </view>
 </view>
-
-<view>啊啊啊啊啊啊</view>
+<view>
+  <van-cell-group>
+  <van-cell title="个人信息" title-width="30%" center class="userCell" size="large" icon="manager" 
+  value="查看" is-link url="/pages/user/info/info">
+  </van-cell>
+  <van-cell title="家庭信息" title-width="30%" center class="userCell" size="large" icon="friends"
+  value="查看" is-link url="/pages/user/family/family">
+  </van-cell>
+  <van-cell title="使用帮助" title-width="30%" center class="userCell" size="large" icon="comment"
+  value="获取帮助" is-link url="/pages/user/help/help">
+  </van-cell>
+  <van-cell title="意见反馈" title-width="30%" center class="userCell" size="large" icon="chat"
+  value="反馈" is-link url="/pages/user/comment/comment">
+  </van-cell>
+  <van-cell title="关于" title-width="30%" center class="userCell" size="large" icon="info" border="{{ false }}"
+  value="关于我们" is-link url="/pages/user/about/about">
+  </van-cell>
+</van-cell-group>
+</view>
