--- a/bpr-miniprogram/pages/user/family/family.wxss
+++ b/bpr-miniprogram/pages/user/family/family.wxss
@@ -1,4 +1,3 @@
-/* pages/user/user.wxss */
 
 :root{
   --van-cell-line-height: 50px;
@@ -6,4 +5,12 @@
 
 .van-cell {
   line-height: var(--van-cell-line-height, 36px) !important;
+}
+
+.van-button {
+  width: 50%;
+}
+
+.myGridItem {
+  background-color: red !important;
 }
