--- a/bpr-miniprogram/pages/user/family/family.wxml
+++ b/bpr-miniprogram/pages/user/family/family.wxml
@@ -1,41 +1,34 @@
-<van-dialog use-slot title="创建家庭" show="{{ showFamilyRegisterPop }}" show-cancel-button confirm-button-color="#51aa38" bind:close="closePop" bind:confirm="registerFamily">
-  <van-field value="{{ familyInfo.familyName }}" type="text" bind:change="dialogInputFamilyName" input-align="center" placeholder="请输入家庭名称" error-message="注意: 家庭名称不能未空" error-message-align="center" />
-</van-dialog>
+<view>
+  <van-dialog use-slot title="创建家庭" show="{{ showFamilyRegisterPop }}" show-cancel-button confirm-button-color="#51aa38" bind:close="closePop" bind:confirm="registerFamily">
+    <van-field value="{{ familyInfo.familyName }}" type="text" bind:change="dialogInputFamilyName" input-align="center" placeholder="请输入家庭名称" error-message="注意: 家庭名称不能未空" error-message-align="center" />
+  </van-dialog>
 
-
-<van-panel title="家庭信息">
-  <van-cell-group>
-    <van-cell title="家庭名称" center>
-      <van-field center readonly type="text" value="{{ familyInfo.familyName }}" border="{{ false }}" />
-    </van-cell>
-    <van-cell title="成员数量" center>
-      <van-field center readonly type="text" value="{{ familyInfo.memberCount }}" border="{{ false }}" />
-    </van-cell>
-    <van-cell title="管理员" center>
-      <van-field center readonly type="text" value="{{ familyInfo.familyManager }}" border="{{ false }}" />
-    </van-cell>
-    <van-cell title="创建时间" center>
-      <van-field center readonly type="text" value="{{ familyInfo.createTime }}" border="{{ false }}" />
-    </van-cell>
-  </van-cell-group>
-  <van-button type="primary" disabled="{{false}}">添加成员</van-button>
-  <van-button type="danger" disabled="{{false}}">退出家庭</van-button>
-</van-panel>
-
-<van-button type="primary" wx:if="{{true}}">创建家庭</van-button>
-
-<van-grid column-num="1" direction="vertical">
-  <van-grid-item use-slot>
-    A
-  </van-grid-item>
-  <van-grid-item use-slot>
-    <van-grid column-num="2">
-      <van-grid-item use-slot custom-class="myGridItem">
-        a
-      </van-grid-item>
-      <van-grid-item use-slot custom-class="myGridItem">
-        b
-      </van-grid-item>
-    </van-grid>
-  </van-grid-item>
-</van-grid>
+  <van-grid column-num="1" custom-class="grid-class">
+    <van-grid-item use-slot content-class="grid-info-class" center="false">
+      <van-row style="text-align: left;" gutter="0">
+          <van-row span="24" style="text-align: left;margin-top: 5px;margin-bottom: 5px;">
+          <h2 style="color: rgba(75, 80, 82, 0.8); font-size: 14px;line-height: 16px;font-weight: 600;">家庭名称: 测试家庭</h2>
+        </van-row>
+        <van-row  span="24" style="text-align: left;margin-top: 5px;margin-bottom: 5px;">
+          <h2 style="color: rgba(75, 80, 82, 0.8); font-size: 14px;line-height: 16px;font-weight: 600;">成员数量: 1</h2>
+        </van-row >
+        <van-col span="24" style="text-align: left;margin-top: 5px;margin-bottom: 5px;">
+          <h2 style="color: rgba(75, 80, 82, 0.8); font-size: 14px;line-height: 16px;font-weight: 600;">创建时间: 2020-01-01 11:11:11</h2>
+        </van-col>
+        <van-col span="24" style="text-align: left;margin-top: 5px;margin-bottom: 5px;">
+          <h2 style="color: rgba(75, 80, 82, 0.8); font-size: 14px;line-height: 16px;font-weight: 600;">家庭管理员: weiwan</h2>
+        </van-col>
+      </van-row>
+    </van-grid-item>
+    <van-grid-item use-slot content-class="grid-item-action-class">
+      <van-row style="width: 100%;">
+        <van-col span="12" style="text-align: center;">
+          <a style="color: rgb(0, 140, 255);">邀请成员</a>
+        </van-col>
+        <van-col span="12" style="text-align: center;">
+          <a style="color: rgb(255, 0, 0);">退出家庭</a>
+        </van-col>
+      </van-row>
+    </van-grid-item>
+  </van-grid>
+</view>
