--- a/bpr-miniprogram/pages/user/family/family.wxss
+++ b/bpr-miniprogram/pages/user/family/family.wxss
@@ -10,7 +10,30 @@
 .van-button {
   width: 50%;
 }
+.grid-class {
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+  padding: 3px 0px 0px 0px;
+  margin: 3px 3px 3px 3px;
+  border: 1px dashed black;
+  background-color: rgb(221, 255, 242) !important;
+}
 
-.myGridItem {
-  background-color: red !important;
+.grid-info-class {
+  padding-left: 0px !important;
+  padding-right: 0px !important;
+  /* border: 1px solid; */
+  text-align: left !important;
+  align-items: normal !important;
+  background-color: rgb(221, 255, 242) !important;
+  padding: var(--grid-item-content-padding,8px 16px) !important;
+}
+
+.grid-item-action-class {
+  padding-left: 5px !important;
+  padding-right: 5px !important;
+  padding-top: 5px !important;
+  padding-bottom: 5px !important;
+  border-top: 1px dashed black;
+  background-color: rgb(221, 255, 242) !important;
 }
