--- a/bpr-miniprogram/pages/user/family/family.wxss
+++ b/bpr-miniprogram/pages/user/family/family.wxss
@@ -15,8 +15,8 @@
   border-radius: 10px;
   padding: 3px 0px 0px 0px;
   margin: 3px 3px 3px 3px;
-  border: 1px dashed black;
-  background-color: rgb(221, 255, 242) !important;
+  /* border: 1px dashed black; */
+  background-color: rgb(255, 255, 255) !important;
 }
 
 .grid-info-class {
@@ -25,7 +25,7 @@
   /* border: 1px solid; */
   text-align: left !important;
   align-items: normal !important;
-  background-color: rgb(221, 255, 242) !important;
+  background-color: rgb(255, 255, 255) !important;
   padding: var(--grid-item-content-padding,8px 16px) !important;
 }
 
@@ -35,5 +35,5 @@
   padding-top: 5px !important;
   padding-bottom: 5px !important;
   border-top: 1px dashed black;
-  background-color: rgb(221, 255, 242) !important;
+  background-color: rgb(255, 255, 255) !important;
 }
