--- a/bpr-miniprogram/pages/user/family/family.wxss
+++ b/bpr-miniprogram/pages/user/family/family.wxss
@@ -11,12 +11,15 @@
   width: 50%;
 }
 .grid-class {
-  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.2);
+  margin-top: 10px !important;
+  box-shadow: 0 0 8px hsl(0deg 0% 45% / 65%);
+  font-family: Menlo,Monaco,Consolas,Courier New,monospace;
   border-radius: 10px;
   padding: 3px 0px 0px 0px;
-  margin: 3px 3px 3px 3px;
-  border: 1px dashed black;
-  background-color: rgb(221, 255, 242) !important;
+  margin: 5px 8px 5px 8px;
+  /* border: 1px dashed black; */
+  background-color: rgb(219, 233, 205, 0) !important;
+  background-image: linear-gradient(to right, rgb(182, 255, 114) -6%, #ffe65b, rgb(182, 255, 114) 100%);
 }
 
 .grid-info-class {
@@ -25,7 +28,7 @@
   /* border: 1px solid; */
   text-align: left !important;
   align-items: normal !important;
-  background-color: rgb(221, 255, 242) !important;
+  background-color: rgb(219, 233, 205, 0) !important;
   padding: var(--grid-item-content-padding,8px 16px) !important;
 }
 
@@ -34,6 +37,53 @@
   padding-right: 5px !important;
   padding-top: 5px !important;
   padding-bottom: 5px !important;
-  border-top: 1px dashed black;
-  background-color: rgb(221, 255, 242) !important;
+  border-top: 0.5pt dashed rgb(0, 0, 0);
+  background-color: rgb(219, 233, 205, 0) !important;
 }
+
+.delete-family-one-button {
+  background-color: red ;width: 120px ;height: 100% ;border-radius: 0px ;vertical-align: middle;font-size: 16px;
+}
+
+
+.family-list-grid-class {
+  margin-top: 20px !important;
+  box-shadow: 0 0 8px hsl(0deg 0% 45% / 65%);
+  font-family: Menlo,Monaco,Consolas,Courier New,monospace;
+  border-radius: 10px;
+  padding: 0px 0px 0px 0px;
+  margin: 5px 8px 5px 8px;
+  /* border: 1px dashed black; */
+  background-color: rgba(255, 255, 255, 1) !important;
+}
+
+.family-list-title-class {
+  padding-left: 0px !important;
+  padding-right: 0px !important;
+  text-align: left !important;
+  align-items: normal !important;
+  padding: var(--grid-item-content-padding,8px 16px) !important;
+  background-color: rgba(255, 255, 255, 1) !important;
+}
+
+.family-list-item-class {
+  padding-left: 0px !important;
+  padding-right: 0px !important;
+  border-top: 1pt solid rgb(194, 194, 194);
+  text-align: left !important;
+  align-items: normal !important;
+  padding: var(--grid-item-content-padding,0px 0px 0px 8px) !important;
+  background-color: rgba(255, 255, 255, 1) !important;
+}
+
+.Diffuse{
+  min-width: 1024px;
+  height: auto;
+  position: relative;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23000000' fill-opacity='0.61' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
+  }
