--- a/bpr-miniprogram/pages/user/family/family.wxml
+++ b/bpr-miniprogram/pages/user/family/family.wxml
@@ -1,60 +1,105 @@
+<wxs module="dateFormat" src="/utils/dateFormat.wxs"></wxs>
+
 <view>
   <view>
-    <van-dialog use-slot title="创建家庭" show="{{ showFamilyRegisterPop }}" show-cancel-button confirm-button-color="#51aa38" bind:close="closePop" bind:confirm="registerFamily">
-      <van-field value="{{ familyInfo.familyName }}" type="text" bind:change="dialogInputFamilyName" input-align="center" placeholder="请输入家庭名称" error-message="注意: 家庭名称不能未空" error-message-align="center" />
+    <van-dialog use-slot title="创建家庭" show="{{ showFamilyRegisterPop }}" show-cancel-button confirm-button-color="#1aad19" bind:close="closePop" bind:confirm="registerFamily">
+      <van-field value="{{ familyInfo.familyName }}" type="text" bind:change="dialogInputFamilyName" input-align="center" placeholder="请输入家庭名称" error-message="注意: 家庭名称不能为空" error-message-align="center" />
     </van-dialog>
 
     <van-grid column-num="1" custom-class="grid-class">
       <van-grid-item use-slot content-class="grid-info-class" center="false">
         <van-row style="text-align: left;" gutter="0">
           <van-row span="24" style="text-align: left;margin-top: 5px;margin-bottom: 16px;">
-            <h2 style="color: rgba(75, 80, 82, 0.8); font-size: 14px;line-height: 24px;font-weight: 600;">家庭名称: 测试家庭</h2>
+            <h2 style="color: rgba(40, 40, 40, 0.9); font-size: 14px;line-height: 24px;font-weight: 600;">
+              家庭名称: {{ familyInfo.familyName }}
+            </h2>
           </van-row>
           <van-row span="24" style="text-align: left;margin-top: 5px;margin-bottom: 16px;">
-            <h2 style="color: rgba(75, 80, 82, 0.8); font-size: 14px;line-height: 24px;font-weight: 600;">成员数量: 1</h2>
+            <h2 style="color: rgba(40, 40, 40, 0.9); font-size: 14px;line-height: 24px;font-weight: 600;">
+              成员数量: {{ familyInfo.familyMemberVos.length }}
+            </h2>
           </van-row>
           <van-col span="24" style="text-align: left;margin-top: 5px;margin-bottom: 16px;">
-            <h2 style="color: rgba(75, 80, 82, 0.8); font-size: 14px;line-height: 24px;font-weight: 600;">创建时间: 2020-01-01 11:11:11</h2>
+            <h2 style="color: rgba(40, 40, 40, 0.9); font-size: 14px;line-height: 24px;font-weight: 600;">
+              家庭管理员: {{ familyInfo.familyManager.nickName }}
+            </h2>
           </van-col>
           <van-col span="24" style="text-align: left;margin-top: 5px;margin-bottom: 16px;">
-            <h2 style="color: rgba(75, 80, 82, 0.8); font-size: 14px;line-height: 24px;font-weight: 600;">家庭管理员: weiwan</h2>
+            <h2 style="color: rgba(40, 40, 40, 0.9); font-size: 14px;line-height: 24px;font-weight: 600;">
+              创建时间: {{dateFormat.formatTime(familyInfo.createTime, 'yyyy-MM-dd hh:mm:ss')}}
+            </h2>
           </van-col>
         </van-row>
       </van-grid-item>
       <van-grid-item use-slot content-class="grid-item-action-class">
-        <van-row style="width: 100%;">
-          <van-col span="12" style="text-align: center;">
-            <a style="color: rgb(0, 140, 255);">邀请成员</a>
+        <van-row style="width: 90%;">
+          <van-button wx:if="{{ familyInfo.familyName }}" round type="info" color="#1aad19" open-type="share">
+            邀请成员
+          </van-button>
+          <van-button wx:if="{{ !isFamilyManager && familyInfo.familyName }}" round type="danger" color="#FD0000" plain>
+            退出家庭
+          </van-button>
+          <van-button wx:if="{{ isFamilyManager && familyInfo.familyName }}" round type="danger" color="#FD0000" plain>
+            解散家庭
+          </van-button>
+          <!-- <van-col span="12" style="text-align: center;">
+            <a style="color: rgb(0, 140, 255);">
+              邀请成员
+            </a>
           </van-col>
           <van-col span="12" style="text-align: center;">
-            <a style="color: rgb(255, 0, 0);">退出家庭</a>
-          </van-col>
+            <a wx:if="{{ !isFamilyManager }}" style="color: rgb(255, 0, 0);">
+              退出家庭
+            </a>
+            <a wx:if="{{ isFamilyManager }}" style="color: rgb(255, 0, 0);">
+              解散家庭
+            </a>
+          </van-col> -->
         </van-row>
       </van-grid-item>
     </van-grid>
     <view style="padding-right: 10px; padding-left: 10px;padding-top: 10px;">
-      <van-button wx:if="{{ !haveFamily }}" block color="green" hairline style="border-radius: 20px;">创建家庭</van-button>
+      <van-button wx:if="{{ !haveFamily }}" block color="#1aad19" hairline style="border-radius: 20px;" bind:click="showRegisterPop">
+        创建家庭
+      </van-button>
     </view>
   </view>
   <view wx:if="{{ haveFamily }}">
+    <!-- <van-divider contentPosition="center"> 家庭成员 </van-divider> -->
     <van-grid column-num="1" custom-class="family-list-grid-class">
-      <van-grid-item  use-slot style="text-align: left ;align-items: normal ; width: 100%;" content-class="family-list-title-class" center="false">
+      <van-grid-item use-slot style="text-align: left ;align-items: normal ; width: 100%;" content-class="family-list-title-class" center="false">
         家庭成员
       </van-grid-item>
-      <van-grid-item  use-slot content-class="family-list-item-class" wx:for="{{ familyInfo.familyMemberVos }}" wx:for-item="member">
-        <van-swipe-cell right-width="{{ 90 }}" style="width: 100%;" disabled="{{ !isFamilyAdmin }}">
+      <van-grid-item use-slot content-class="family-list-item-class" wx:for="{{ familyInfo.familyMemberVos }}" wx:for-item="member">
+        <van-swipe-cell right-width="{{ 90 }}" style="width: 100%;" disabled="{{ !isFamilyManager }}">
           <van-row style="text-align: left;" gutter="0">
-            <van-row span="24" style="text-align: left;margin-top: 5px;margin-bottom: 16px;">
-              <h2 style="color: rgba(54, 54, 54, 0.8); font-size: 14px;line-height: 24px;font-weight: 700;">名称: {{member.name}}</h2>
+            <van-row span="24" style="text-align: left; margin-top: 5px; margin-bottom: 16px;">
+              <h2 style="color: rgba(40, 40, 40, 0.9); font-size: 14px; line-height: 25px; font-weight: 700; ">
+                成员昵称: {{ member.nickName }}
+              </h2>
             </van-row>
-            <van-row span="24" style="text-align: left;margin-top: 5px;margin-bottom: 16px;">
-              <h2 style="color: rgba(54, 54, 54, 0.8); font-size: 14px;line-height: 24px;font-weight: 700;">年龄: 18</h2>
+            <van-row span="24" style="text-align: left; margin-top: 5px; margin-bottom: 16px;">
+              <h2 style="color: rgba(40, 40, 40, 0.9); font-size: 14px; line-height: 25px; font-weight: 700; ">
+                成员年龄: {{ member.age }}
+              </h2>
             </van-row>
-            <van-col span="24" style="text-align: left;margin-top: 5px;margin-bottom: 16px;">
-              <h2 style="color: rgba(54, 54, 54, 0.8); font-size: 14px;line-height: 24px;font-weight: 700;">身份: 父亲</h2>
+            <van-col wx:if="{{ isFamilyManager }}" span="24" style="text-align: left; margin-top: 5px; margin-bottom: 16px;">
+              <h2 style="color: rgba(40, 40, 40, 0.9); font-size: 14px; line-height: 25px; font-weight: 700; ">
+                成员称谓: {{ member.familyIdentity }}
+              </h2>
             </van-col>
+            <van-row span="24" style="text-align: left; margin-top: 5px; margin-bottom: 16px;">
+              <h2 style="color: rgba(40, 40, 40, 0.9); font-size: 14px; line-height: 25px; font-weight: 700; ">
+                上次测量时间: {{ member.lastRecordTime }}
+              </h2>
+            </van-row>
           </van-row>
-          <van-button block square slot="right" type="primary" color="red" custom-style="height: 100%;width: 90px">移出家庭</van-button>
+          <van-button wx:if="{{ isFamilyManager }}" block square slot="right" type="primary" color="red" custom-style="height: 100%; width: 90px">
+            移出家庭
+          </van-button>
+          <van-button wx:if="{{ isFamilyManager }}" block square slot="right" type="primary" color="red" custom-style="height: 100%; width: 90px">
+            修改称谓
+          </van-button>
         </van-swipe-cell>
       </van-grid-item>
     </van-grid>
