--- a/bpr-miniprogram/app.wxss
+++ b/bpr-miniprogram/app.wxss
@@ -1,5 +1,5 @@
 /**app.wxss**/
-.container {
+/* .container {
   height: 400px;
   width: 600px;
   display: flex;
@@ -8,5 +8,20 @@
   justify-content: space-between;
   padding: 200rpx 0;
   box-sizing: border-box;
-} 
+}  */
+
+/* .container {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  box-sizing: border-box;
+}  */
+
 
