--- a/bpr-miniprogram/pages/analysis/analysis.wxss
+++ b/bpr-miniprogram/pages/analysis/analysis.wxss
@@ -1,16 +1,41 @@
 /* pages/pic/pic.wxss */
 .container{
-
+  padding-top: 20px;
   width: 100%;
-
-  height: 100vw;
-
+  height: 65vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  box-sizing: border-box;
 }
 
-ec-canvas {
-
+.pieContainer {
+  padding-top: 20px;
   width: 100%;
+  height: 75vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  box-sizing: border-box;
+}
 
+/* .container {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  box-sizing: border-box;
+}  */
+
+ec-canvas {
+  width: 100%;
   height: 100%;
-
 }
